[package]
name = "logger"
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
anstyle = "1.0.14"
chrono = "0.4.44"
env_logger = "0.11.10"
log = "0.4.29"

[lints.clippy]
cast_possible_truncation = "deny"
manual_let_else = "deny"
map_unwrap_or = "deny"
match_wildcard_for_single_variants = "deny"
needless_raw_string_hashes = "deny"
semicolon_if_nothing_returned = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
wildcard_imports = "deny"
